# lora_network_layer

./: CMakeLists.txt  _memory.md  _memory_network_layer.md  _plan.md  _plan_simulation_section.md  network_layer_architecture.md  report_simulation_section.md
.github/workflows/: docs.yml
components/lora_network_layer/: CMakeLists.txt  Kconfig  idf_component.yml  lora_network_layer.c
components/lora_network_layer/include/: duplicate_filter.h  forwarding_queue.h  geo_utils.h  link_layer_interface.h  location_provider.h  lora_link_adapter.h  net_log.h  network_header.h  network_manager.h  routing_engine.h
components/lora_network_layer/src/: duplicate_filter.cpp  forwarding_queue.cpp  geo_utils.cpp  lora_link_adapter.cpp  network_manager.cpp  routing_engine.cpp
docs/: Doxyfile  architecture.md  doxygen-awesome.css  mainpage.md
simulation/: CMakeLists.txt  README.md  TESTING_GUIDE.md
simulation/config/: example_network.yml  simulation_config.schema.yml
simulation/docs/: simulation_architecture.md  simulation_wireless_upgrade_design.md
simulation/include/: config_loader.h  simulated_link_layer.h  simulated_location_provider.h  simulated_network.h  simulation_builder.h  simulation_clock.h  simulation_config.h  simulation_docs.h  simulation_event_queue.h  simulation_metrics.h
simulation/src/: config_loader.cpp  main.cpp  simulated_link_layer.cpp  simulated_location_provider.cpp  simulated_network.cpp  simulation_builder.cpp  simulation_clock.cpp  simulation_event_queue.cpp  simulation_metrics.cpp
simulation/tests/include/: simulation_test_base.h
simulation/tests/src/: simulation_test_base.cpp  test_simulation_phase3.cpp  test_simulation_phase4.cpp  test_simulation_phase5.cpp
